# mrcp-test

./: .gitignore  Makefile.am  autogen.sh  configure.ac
cli/: Makefile.am  asr_engine.c  asr_engine.h  main.cc
conf/client-profiles/: nuance.xml
